changed cursor position on startup to be offscreen. fixed hover on nav links . Added cool animation to hovering brand links

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -118,14 +118,40 @@ body[data-theme="light"] a:hover{
                     var(--color-text-primary) 100%,var(--color-bg-secondary) 100%) 
                     fixed;
   color: var(--color-text-secondary); 
+  transition: all 1s ease;
+
 }
 .fa-mask:hover{
   color: var(--color-bg-secondary);
 }
 .nav-link-hover > a{
-  border-left: 0.5px;
-  border-right: 0.5px;
 }
 .nav-link-hover > a:hover{
-  border: 0.5px solid var(--color-text-primary);
+  border-left: 0.5px solid transparent;
+  border-right: 0.5px solid transparent;
+
+  border-color:  var(--color-text-primary);
+}
+@media only screen and (min-width: 1280px) {
+  .cursor {
+  width: 3rem;
+  height: 3rem;
+  border: 1px solid var(--color-text-secondary);
+  border-radius: 50%;
+  position: fixed;
+  transform: translate(-50%, -50%);
+  transform-origin: 100% 100%;
+  pointer-events: none;
+  transition: all 0.3s ease;
+  transition-property: transform;
+  top:var(--y,0);
+  left:var(--x,0);
+  z-index: 101;
+  
+  }
+  .expand {
+    transform: scale(2);
+  }
+
+  
 }
